tester_ft/log/compile_error_vec_19.txt
-VECTOR ASSIGN NUM TEST-

In file included from ./tmp/outfile_vec_19.cpp:4:
/Users/anastasiadementeva/Desktop/projects/ft_containers/vector.hpp:453:23: error: comparison of integers of different signs: 'int' and 'ft::vector<int>::size_type' (aka 'unsigned long') [-Werror,-Wsign-compare]
                                        for(int n = 0; n < __n; n++)
                                                       ~ ^ ~~~
./tmp/outfile_vec_19.cpp:30:6: note: in instantiation of member function 'ft::vector<int>::assign' requested here
                v2.assign(num, fill);
                   ^
In file included from ./tmp/outfile_vec_19.cpp:4:
/Users/anastasiadementeva/Desktop/projects/ft_containers/vector.hpp:463:23: error: comparison of integers of different signs: 'int' and 'ft::vector<int>::size_type' (aka 'unsigned long') [-Werror,-Wsign-compare]
                                        for(int n = 0; n < __n; n++)
                                                       ~ ^ ~~~
2 errors generated.
